crates/knok/tests/ui/unsupported_element_type.stderr
error: only f32, f64, i32, and i64 tensors are supported; f16/bf16 and quantized integer types are not supported yet
 --> tests/ui/unsupported_element_type.rs:4:27
  |
4 | fn unsupported(x: Tensor1<u8, 4>) -> Tensor1<u8, 4> {
  |                           ^^

warning: unused import: `knok::prelude::*`
 --> tests/ui/unsupported_element_type.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
